# AnchorsFactory

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  anchors-list-GLapp.txt  anchors-list.txt  default-anchors-list.txt  pyproject.toml  requirements-dev.txt  requirements.txt  tdAnchorsFactory.py
anchorsfactory/: __init__.py  apply.py  cli.py  composites.py  convert.py  dsl.py  geometry.py  model.py  parser.py  presets.py  query.py  runner.py  vocabulary.py
anchorsfactory/_vendor/: README.md  __init__.py
anchorsfactory/rules/: basic.glyphsConstruction  default-italics.af  default.af  default.anchors  default.glyphsConstruction  devanagari.af  hebrew.af  thai.af
anchorsfactory/studio/: __init__.py  __main__.py  compose.py  demo.py  render.py  server.py  upload.py
anchorsfactory/studio/_vendor/: README.md  __init__.py
anchorsfactory/studio/static/: app.css  app.js  index.html
docs/: DSL.md  anchor-rules.md  studio.md
docs/guide/: 01-getting-started.md  02-anchor-basics.md  03-x-positions.md  04-y-positions.md  05-centroid.md  06-sums-and-biases.md  07-variables-and-labels.md  08-selectors-and-accumulation.md  09-directives.md  10-italics.md  11-script-cookbooks.md  README.md
docs/guide/examples/: deva-top-bottom.anchors  thai-top-bottom.af
docs/guide/tools/: .gitignore  fetch_fonts.sh  make_examples.py
docs/proposals/: ROADMAP.md  rfc-component-frames.md  rfc-derived-anchors.md  rfc-edge-sampling.md  rfc-propagate.md
docs/research/: world-scripts-applicability.md
examples/: README.md  afii_to_GLapp.txt  anchors-list-Greek.txt  default-anchors-list-italics.txt
examples/legacy/: batch.py
examples/rules/: README.md  default-italics.anchors  default.anchors  latin-ext-additional.anchors
presets/: README.md  latin-ext-additional.glyphsConstruction  latin-ext-b.anchors  latin-ext-b.glyphsConstruction  legacy-default-italics.anchors
scripts/: release.py  studio_dev.py  studio_save.py
tests/: conftest.py  rulesets.py  test_cli.py  test_component_frames.py  test_composites.py  test_compute.py  test_convert.py  test_derived.py  test_dsl.py  test_geometry.py  test_inherit.py  test_italic.py  test_model.py  test_parser.py  test_presets_scripts.py  test_propagate.py  test_query.py  test_runner.py  test_studio.py  test_studio_compose.py  test_studio_ui.py  test_validate.py  test_variables.py  test_vendor_glyphconstruction.py  test_vocabulary.py
