[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "anchorsfactory"
version = "0.1.0.dev0"
description = "Rule-driven anchor placement for UFO fonts"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "fontParts",
    "fontTools",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
anchorsfactory = "anchorsfactory.cli:main"
anchorsfactory-convert = "anchorsfactory.convert:main"

[tool.setuptools]
packages = ["anchorsfactory", "anchorsfactory.rules"]

[tool.setuptools.package-data]
"anchorsfactory.rules" = ["*.af"]

[tool.pytest.ini_options]
testpaths = ["tests"]
