[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "anchorsfactory"
version = "0.5.1"
description = "Rule-driven anchor placement for UFO fonts"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Alexander Lubovenko", email = "lubovenko@me.com" }]
keywords = [
    "ufo", "font", "fonts", "anchors", "diacritics", "marks",
    "typography", "type-design", "fonttools", "fontparts", "opentype",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Fonts",
]
dependencies = [
    "fontParts",
    "fontTools",
]

[project.urls]
Homepage = "https://github.com/typedev/AnchorsFactory"
Repository = "https://github.com/typedev/AnchorsFactory"
Issues = "https://github.com/typedev/AnchorsFactory/issues"

[project.optional-dependencies]
dev = ["pytest", "build", "playwright"]

[project.scripts]
anchorsfactory = "anchorsfactory.cli:main"
anchorsfactory-convert = "anchorsfactory.convert:main"

# The distribution is the engine, the CLI and the vendored GlyphConstruction —
# nothing else. Rule sets are data the host owns (samples in examples/rules/),
# and the Studio is a repository-only reference consumer: it has no third-party
# dependencies to gate behind an extra, so it is simply not shipped. Both stay
# importable from a source checkout.
[tool.setuptools]
packages = ["anchorsfactory", "anchorsfactory._vendor"]

[tool.setuptools.package-data]
"anchorsfactory._vendor" = ["LICENSE", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
